[gd_scene load_steps=4 format=3 uid="uid://d0kv1gl3gx1dv"]

[ext_resource type="Theme" uid="uid://bgv01iwalo2q0" path="res://UI/MenuTheme.tres" id="1_hxcwt"]
[ext_resource type="Script" path="res://UI/MainMenu.gd" id="2_28et4"]
[ext_resource type="FontFile" uid="uid://ds1lefj5urqb5" path="res://Assets/Kenney Bold.ttf" id="3_xvklu"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_hxcwt")
script = ExtResource("2_28et4")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1150.0
offset_bottom = 647.0
color = Color(0, 0, 0, 1)

[node name="TitleContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 1153.0
offset_bottom = 370.0

[node name="Label" type="Label" parent="TitleContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_xvklu")
text = "RELAY
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonsContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_top = 273.0
offset_right = 1153.0
offset_bottom = 643.0

[node name="VBoxContainer" type="VBoxContainer" parent="ButtonsContainer"]
layout_mode = 2

[node name="Start" type="Button" parent="ButtonsContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../Exit")
text = "Start"
flat = true

[node name="Options" type="Button" parent="ButtonsContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Options"
flat = true

[node name="Exit" type="Button" parent="ButtonsContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_bottom = NodePath("../Start")
text = "Exit"
flat = true

[connection signal="pressed" from="ButtonsContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="ButtonsContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="ButtonsContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
